# secateur

./: .dockerignore  .env-template  .gitignore  DevProcfile  Dockerfile  LICENSE  Pipfile  Procfile  README.md  TODO.md  docker-compose-live.yml  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  pytest.ini  requirements.in  setup.cfg
.github/workflows/: build.yml  release.yml
scripts/: block-followers-of.py  clear_untils.py  deploy  expire_all.py  get-user.py  logs  migrate_oauth.py  mute-followers-of.py  secateur  unfriend-all.py  update-twitter.py  update-user.py
secateur/: admin.py  apps.py  celery.py  forms.py  logging.py  models.py  otel.py  settings.py  settings_build.py  signals.py  tasks.py  tests.py  twitter.py  urls.py  utils.py  utils_test.py  views.py  wsgi.py
secateur/management/commands/: promotesuperuser.py
secateur/migrations/: 0001_initial.py  0002_account_name.py  0002_auto_20171210_1402.py  0002_relationship_until.py  0003_auto_20171210_1542.py  0003_auto_20181103_1803.py  0003_auto_20190414_1413.py  0004_auto_20171210_2126.py  0004_auto_20190414_1505.py  0005_auto_20171216_1517.py  0005_user_is_twitter_api_enabled.py  0006_auto_20190415_2116.py  0006_remove_twitter_blocks.py  0007_auto_20171216_1627.py  0007_user_account.py  0008_auto_20171216_1642.py  0008_populate_user_account.py  0009_auto_20171216_1644.py  0009_auto_20200222_1947.py  0010_auto_20200529_2124.py  0010_remove_twitter_mutes.py  0011_auto_20200530_1841.py  0011_mute.py  0012_auto_20171216_1658.py  0012_auto_20200530_1850.py  0013_auto_20200530_1859.py  0013_twitter_mutes.py  0014_auto_20200608_1618.py  0015_auto_20200610_1043.py  0016_auto_20200610_1121.py  0017_auto_20200610_2103.py  0018_auto_20200611_1034.py  0019_auto_20200611_1623.py  0020_auto_20200611_1645.py  0021_auto_20200611_2236.py  0022_auto_20200611_2252.py  0023_logmessage_rate_limited.py  0024_remove_logmessage_message.py  0025_auto_20200626_1122.py  0026_auto_20200704_1359.py  (+24 more)
secateur/templates/: account.html  base.html  block-accounts.html  block-messages.html  block.html  blocked.html  bootstrap.html  disconnect.html  disconnected.html  following.html  home.html  log-messages.html  search.html  suspended.html  unblock-everybody.html  update-following.html
secateur/templates/flatpages/: default.html
secateur/tests/: test_forms.py  test_models.py  test_utils.py  test_views.py
