[tool.poetry]
name = "secateur"
version = "0.1.0"
description = ""
authors = ["Tom Eastman <tom@eastman.nz>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.2"
social-auth-app-django = "^5.0.0"
python-twitter = "^3.5"
psycopg2-binary = "^2.8.6"
celery = {version = "^5.0.1", extras = ["redis,sqs"]}
django-redis = "^5.2.0"
gunicorn = "^20.0.4"
whitenoise = "^6.0.0"
django-celery-beat = "^2.1.0"
dj-database-url = "^0.5.0"
django-csp = "^3.7"
django-request = "^1.5.6"
django-xff = "^1.3.0"
django-structlog = "^2.2.0"
django-bootstrap4 = "^22.1"
gevent = "^21.12.0"
botocore = "^1.23.28"
boto3 = "^1.20.28"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-django = "*"
pytest-cov = "*"
pytest-mypy = "*"
pytest-black = "*"
django-stubs = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
