[tool.poetry]
name = "secateur"
version = "0.1.0"
description = ""
authors = ["Tom Eastman <tom@eastman.nz>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
social-auth-app-django = "^5.0.0"
python-twitter = "^3.5"
celery = {version = "^5.2.6", extras = ["redis,sqs"]}
django-redis = "^5.2.0"
gunicorn = "^20.0.4"
whitenoise = "^6.0.0"
# Temporarily fetching from git till the version that's compatible with django 4.0 is released.
django-celery-beat = { git = "https://github.com/celery/django-celery-beat.git", rev = "10123d3"}
dj-database-url = "^0.5.0"
django-csp = "^3.7"
django-request = "^1.6.1"
django-xff = "^1.3.0"
django-structlog = "^2.2.0"
django-bootstrap4 = "^22.1"
gevent = "*"
botocore = "*"
boto3 = "*"
tzdata = "*"
opentelemetry-sdk = "1.10.0"
opentelemetry-exporter-otlp-proto-grpc = "1.10.0"
opentelemetry-instrumentation-django = "0.29b0"
opentelemetry-instrumentation-celery = "0.29b0"
opentelemetry-instrumentation-requests = "0.29b0"
opentelemetry-instrumentation-psycopg2 = "0.29b0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-django = "*"
pytest-cov = "*"
pytest-mypy = "*"
pytest-black = "*"
django-stubs = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
